// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsTable selectors should return API error 1`] = `"Request failed with status code 503"`;

exports[`InsightsTable selectors should return API hits 1`] = `
Array [
  Object {
    "host_id": 1,
    "hostname": "foo.example.com",
    "id": 16,
    "last_seen": "2020-11-01T15:55:14.280+02:00",
    "likelihood": 1,
    "publish_date": "2017-11-02T14:00:00.000+02:00",
    "results_url": "https://cloud.redhat.com/insights/advisor/recommendations/hardening_yum%7CHARDENING_YUM_GPG_3RD_6/716306d2-b4f8-446f-82c8-a45af30110bd/",
    "solution_url": "",
    "title": "Decreased security: Yum GPG verification disabled",
    "total_risk": 1,
  },
  Object {
    "host_id": 1,
    "hostname": "foo.example.com",
    "id": 17,
    "last_seen": "2020-11-01T15:55:14.280+02:00",
    "likelihood": 3,
    "publish_date": "2019-07-12T02:08:00.000+03:00",
    "results_url": "https://cloud.redhat.com/insights/advisor/recommendations/packages_across_major_release%7CPACKAGES_ACROSS_MAJOR_RELEASE/716306d2-b4f8-446f-82c8-a45af30110bd/",
    "solution_url": "https://access.redhat.com/node/54483",
    "title": "Installation of packages across major releases is not supported",
    "total_risk": 2,
  },
]
`;

exports[`InsightsTable selectors should return API item count 1`] = `2`;

exports[`InsightsTable selectors should return API status 1`] = `"RESOLVED"`;

exports[`InsightsTable selectors should return insights isAllSelected 1`] = `false`;

exports[`InsightsTable selectors should return insights selectedIds 1`] = `
Object {
  "51": true,
}
`;

exports[`InsightsTable selectors should return insights showSelectAllAlert 1`] = `true`;

exports[`InsightsTable selectors should return insights table 1`] = `
Object {
  "isAllSelected": false,
  "selectedIds": Object {
    "51": true,
  },
  "showSelectAllAlert": true,
}
`;

exports[`InsightsTable selectors should return queryParams 1`] = `
Object {
  "isSelectAll": false,
  "page": 1,
  "perPage": 7,
  "query": "total_risk < 3",
  "sortBy": "total_risk",
  "sortOrder": "asc",
}
`;

exports[`InsightsTable selectors should return router page 1`] = `1`;

exports[`InsightsTable selectors should return router perPage 1`] = `7`;

exports[`InsightsTable selectors should return router query 1`] = `
Object {
  "page": "1",
  "per_page": "7",
  "search": "total_risk+%3C+3",
  "sort_by": "total_risk",
  "sort_order": "asc",
}
`;

exports[`InsightsTable selectors should return router search 1`] = `"total_risk < 3"`;

exports[`InsightsTable selectors should return router sort by 1`] = `"total_risk"`;

exports[`InsightsTable selectors should return router sort order 1`] = `"asc"`;
